// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-bRBYWo gXSQDz"
  >
    <div
      class="sc-bdVaJa kwzqrW"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-bRBYWo gXSQDz"
  >
    <div
      class="sc-TOsTZ kPAxwg"
    >
      <div
        class="sc-cJSrbW koRAKj"
      >
        Max column width:
        <input
          class="sc-ksYbfQ Agou"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-dxgOiQ VMFUy"
  >
    <div
      class="sc-dVhcbM fvNHJF"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-dxgOiQ VMFUy"
  >
    <pre
      class="sc-hzDkRC hBgxdU"
    >
      ╒═══╕
│"x"│
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
